fixing the image behind the bar properly

--- a/public/assets/Css/style.css
+++ b/public/assets/Css/style.css
@@ -242,6 +242,11 @@ nav { display: none; }
     .section__subtitle--about {
         grid-column: 1/-1 ;
         grid-row: 2;
+        position:relative;
+        left: -1em;
+        width: calc(100% + 2em);
+        padding-left: 1em;
+        padding-right: calc(200px + 4em);
     }
 
     /* .section__subtitle--about {
